package br.unitins.topicos1.model;

public enum TipoCambio {
    AUTOMATICA,
    AUTOMATICASEQUENCIAL,
    AUTOMATIZADA,
    AUTOMATIZADADCT,
    CVT,
    MANUAL,
    SEMIAUTOMATICA,
}
