package br.unitins.topicos1.model;

public enum TipoCarroceria {
    BUGGY,
    CONVERSIVEL,
    CUPE,
    HATCHBACK,
    MINIVAN,
    PERUASW,
    PICAPE,
    SEDA,
    UTILITARIOESPORTIVO,
    VANUTILITARIO,
}
