package br.unitins.topicos1.model;

public enum TipoCombustivel {
    FLEX,
    GASOLINA,
    DIESEL
}
